--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gyf/builder-for-laravel",
+    "name": "gyf/packagetest",
     "description": "crud",
     "license": "MIT",
     "authors": [
