--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,15 @@
         "psr-4": {
             "Gyf\\Packagetest\\": "src/"
         }
+    },
+    "extra": {
+    "laravel": {
+        "providers": [
+            "Gyf\\Packagetest\\PackagetestServiceProvider"
+        ],
+        "aliases": {
+            "Packagegyf": "Gyf\\Packagetest\\Facade\\Packagetest"
+            }
+        }
     }
 }
